{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 24,
  "lineage": "78a7adf1-0a98-e374-6d0c-ed504b04f46a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gfg-vpc-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007020fd9c84e18c7",
            "arn": "arn:aws:ec2:ap-south-1:533266954782:instance/i-0ab2d80f8ec7ea4a2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab2d80f8ec7ea4a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01211957f50b0fe87",
            "private_dns": "ip-10-0-1-252.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.252",
            "public_ip": "3.110.174.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0212523541e601c9c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05069237bb75ca5de",
            "tags": {
              "Name": "My-EC2-My-VPC"
            },
            "tags_all": {
              "Name": "My-EC2-My-VPC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d938d6b7d6a2b3a6"
            ]
          },
          "dependencies": [
            "aws_security_group.GFG-SG",
            "aws_subnet.gfg-subnet",
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gfg-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266954782:internet-gateway/igw-0b576edd224da3f09",
            "id": "igw-0b576edd224da3f09",
            "owner_id": "533266954782",
            "tags": {
              "Name": "My-GFG-Gateway"
            },
            "tags_all": {
              "Name": "My-GFG-Gateway"
            },
            "vpc_id": "vpc-06c2069d96c04eccc"
          },
          "dependencies": [
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "gfg-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266954782:route-table/rtb-086a1c288e7a9d6bf",
            "id": "rtb-086a1c288e7a9d6bf",
            "owner_id": "533266954782",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b576edd224da3f09",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "My-GFG-RT"
            },
            "tags_all": {
              "Name": "My-GFG-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c2069d96c04eccc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gfg-gw",
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "gfg-RT-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0746bab37a5410861",
            "route_table_id": "rtb-086a1c288e7a9d6bf",
            "subnet_id": "subnet-05069237bb75ca5de"
          },
          "dependencies": [
            "aws_internet_gateway.gfg-gw",
            "aws_route_table.gfg-rt",
            "aws_subnet.gfg-subnet",
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "GFG-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266954782:security-group/sg-0d938d6b7d6a2b3a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d938d6b7d6a2b3a6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              }
            ],
            "name": "MY-GFG-SG",
            "name_prefix": "",
            "owner_id": "533266954782",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "MY-GFG-SG"
            },
            "tags_all": {
              "Name": "MY-GFG-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c2069d96c04eccc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gfg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266954782:subnet/subnet-05069237bb75ca5de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05069237bb75ca5de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533266954782",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "My-GFG-Subnet"
            },
            "tags_all": {
              "Name": "My-GFG-Subnet"
            },
            "vpc_id": "vpc-06c2069d96c04eccc"
          },
          "dependencies": [
            "aws_vpc.gfg-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "gfg-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:533266954782:vpc/vpc-06c2069d96c04eccc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6561379118e16d6",
            "default_route_table_id": "rtb-05fa63902c88f42a7",
            "default_security_group_id": "sg-0f9ec448e98d3d535",
            "dhcp_options_id": "dopt-0f84b60846a6209c9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c2069d96c04eccc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05fa63902c88f42a7",
            "owner_id": "533266954782",
            "tags": {
              "Name": "My-GFG-VPC"
            },
            "tags_all": {
              "Name": "My-GFG-VPC"
            }
          }
        }
      ]
    }
  ]
}